# PUT-MLOps-2025-Winter

./: .gitignore  README.md
project1/: project1.ipynb  pyproject.toml
project2/: bento_service.py  pyproject.toml  query_service.py
project3/: install_dependencies.sh  run_service.sh  service.py
project4/: Dockerfile  pyproject.toml
project4/scripts/: create_lambda.py  download_model_weights.py  upload_to_ecr.py
project4/src/ml_app/: main.py  model.py  s3_connector.py  settings.py
